--- a/sample/src/main/res/layout/activity_simple_main.xml
+++ b/sample/src/main/res/layout/activity_simple_main.xml
@@ -8,27 +8,27 @@
     tools:context="com.yaoxiaowen.download.sample.SimpleMainActivity">
 
     <TextView
-        android:id="@+id/firstTitle"
+        android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0/0" />
 
     <ProgressBar
-        android:id="@+id/firstProgressBar"
+        android:id="@+id/progressBar"
         style="@android:style/Widget.ProgressBar.Horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:max="100" />
 
     <Button
-        android:id="@+id/firstBtn"
+        android:id="@+id/btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="下载" />
 
 
     <Button
-        android:id="@+id/deleteAllBtn"
+        android:id="@+id/deleteBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="删除所有文件"
